working to feed dashboard in Elastic
